--- a/src/sections/AboutUs/AboutUs.module.css
+++ b/src/sections/AboutUs/AboutUs.module.css
@@ -4,6 +4,7 @@
   gap: 5vw;
   color: #ddd;
   font-size: 2.2vh;
+  position: relative;
 }
 
 .mobile .container {
@@ -39,4 +40,34 @@
 
 .mobile .link {
   font-size: 19px;
+}
+
+.imageBorderContainer{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
+.parallaxContainer{
+  width: 100%;
+  height: 100%;
+}
+
+.backgroundWrapper{
+  position: absolute;
+  inset: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.background {
+  position: relative;
+  background-image: url("../../../public/assets/wallpaper.jpg");
+  background-size: cover;
+  background-position: center;
+  width: 150%;
+  height: 150%;
+  margin-left: -10%;
+  margin-top: -10%;
 }
